force-app/main/default/objects/Tier_Config__c/Tier_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration used to store names of old tiers and plans</description>
    <label>Tier Config</label>
</CustomObject>