force-app/main/default/objects/Tier_Config__c/fields/New_Price_1__c.field-meta.xml
<CustomField>
    <fullName>New_Price_1__c</fullName>
    <description>Price of the new Simple Tier - Typically $40 Base, $6: 1+</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Price 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>