force-app/main/default/objects/Tier_Config__c/fields/New_Price_2__c.field-meta.xml
<CustomField>
    <fullName>New_Price_2__c</fullName>
    <description>Price of the new Plus Tier - Typically $80 Base, $12: 1+</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Price 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>