force-app/main/default/objects/Tier_Config__c/fields/New_Price_3__c.field-meta.xml
<CustomField>
    <fullName>New_Price_3__c</fullName>
    <description>Price of the new Premium Tier - Typically $0 Base, $34: 25+</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Price 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>