force-app/main/default/objects/Tier_Config__c/fields/New_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>New_Tier_1__c</fullName>
    <description>Name of the new Tier - Typically it is called Simple</description>
    <label>New Tier 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>