force-app/main/default/objects/Tier_Config__c/fields/New_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>New_Tier_2__c</fullName>
    <description>Name of new Tier 2 - Typically it is called Plus</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Tier 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>