force-app/main/default/objects/Tier_Config__c/fields/New_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>New_Tier_3__c</fullName>
    <description>Name of New Tier 3 - Typically it is called Premium</description>
    <encryptionScheme>None</encryptionScheme>
    <label>New Tier 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>