force-app/main/default/objects/Tier_Config__c/fields/Old_Tier_1__c.field-meta.xml
<CustomField>
    <fullName>Old_Tier_1__c</fullName>
    <description>Name of Old Tier 1 - Core</description>
    <label>Old Tier 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>