force-app/main/default/objects/Tier_Config__c/fields/Old_Tier_2__c.field-meta.xml
<CustomField>
    <fullName>Old_Tier_2__c</fullName>
    <description>Name of Old Tier 2 - Typically Complete</description>
    <label>Old Tier 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>