force-app/main/default/objects/Tier_Config__c/fields/Old_Tier_3__c.field-meta.xml
<CustomField>
    <fullName>Old_Tier_3__c</fullName>
    <description>Name of Old Tier 3 - Typically Concierge</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Tier 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>