force-app/main/default/objects/Tier_Config__c/fields/Priority_Support_Employee_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Priority_Support_Employee_Line_Item__c</fullName>
    <description>Name of product for Priority Support Employee Line Item</description>
    <label>Priority Support Employee Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>