force-app/main/default/objects/Tier_Config__c/fields/Upsell_Tier_Priority_Support__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Tier_Priority_Support__c</fullName>
    <description>Using Plus with Priority Support as upsell tier in LogSmartCallingController</description>
    <label>Upsell Tier Priority Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>